jmx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmx-exporter
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: jmx-exporter
  template:
    metadata:
      labels:
        app: jmx-exporter
    spec:
      containers:
      - name: jmx-exporter
        securityContext:
          privileged: true
        image: sscaling/jmx-prometheus-exporter
        ports:
        - containerPort: 5556
        volumeMounts:
        - name: config-volume
          mountPath: /opt/jmx_exporter/config.yml
          subPath: config.yml
      volumes:
      - name: config-volume
        hostPath:
          path: N:/Ph.D/REST_OrderDeliverySys-master/monitoring/config.yml
