jmx2.yaml
#Jmx-exporter deployment for pizzahunt
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmx-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jmx-exporter
  template:
    metadata:
      labels:
        app: jmx-exporter
    spec:
      containers:
      - name: jmx-exporter
        securityContext:
          privileged: true
        image: sscaling/jmx-prometheus-exporter
        ports:
        - containerPort: 5556
        volumeMounts:
        - name: config-volume
          mountPath: /opt/jmx_exporter/config.yml
          subPath: config.yml  # Use subPath if the file inside config-volume has a different name
      volumes:
      - name: config-volume
        configMap:
          name: jmx-config  # Name of the ConfigMap
