payment_pod.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  type: NodePort
  selector:
    app: payment
  ports:
  - protocol: TCP
    port: 8080
    name: http
    nodePort: 31005
