preparation_pod.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: preparation
  labels:
    app: preparation
spec:
  type: NodePort
  selector:
    app: preparation
  ports:
  - protocol: TCP
    port: 8080
    name: http
    nodePort: 31003
